# Typability

./: .eslintignore  .eslintrc.json  LICENSE  README-zh_CN.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  main.yml  pr.yml  validate.yml
.husky/: pre-commit
locale/: en.json  index.ts  zh-cn.json  zh-tw.json
src/: App.module.scss  App.tsx  main.tsx  style.scss
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  setup.rs
src-tauri/wix-assets/: main.wxs
src/components/About/: about.module.scss  index.tsx
src/components/EditMenu/: index.tsx
src/components/FileMenu/: index.tsx
src/components/FloatingToolbar/: floating-toolbar.module.scss  index.tsx
src/components/MilkdownEditor/: index.tsx
src/components/Preferences/: index.tsx  preferences.module.scss
src/components/TitleBar/: index.tsx  title-bar.module.scss
src/hooks/: dark.ts
src/jotais/: file.ts  settings.ts  ui.ts
src/utils/: findAndReplace.ts  task.ts
