[package]
name = "typability"
version = "0.1.0"
description = "a WYSIWYG markdown editor based on Milkdown."
authors = ["SimonShiki"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["app-all", "dialog-all", "fs-all", "os-all", "window-all"] }
window-vibrancy = "0.3.2"
window-shadows = "0.2.1"
os_info = "3.5.1"
rdev = "0.5.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
