[package]
name = "typability"
version = "0.4.0"
description = "a WYSIWYG markdown editor based on Milkdown."
authors = ["SimonShiki"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["app-all", "dialog-all", "fs-all", "os-all", "path-all", "process-relaunch-dangerous-allow-symlink-macos", "window-all"] }
window-vibrancy = "0.3.2"
window-shadows = "0.2.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
#default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
opt-level = "z"  # Optimize for size.
codegen-units = 1
strip = true  # Automatically strip symbols from the binary.
lto = true # Enables link to optimizations
